--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <img src="./Images/ces logo.png">
-                    <img src="./Images/mmmut logo.jpg" id="top-logo">
+                    <a href="http://www.mmmut.ac.in/" target= "_blank"><img src="./Images/mmmut logo.jpg" id="top-logo"></a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
