--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                 </div>
                 <div style="text-align: center;">
                     Designed with <i class="fa fa-fw fa-heart fa-spin" style="color:red;font-size:24px;"></i> by <a
-                        href="https://github.com/refertoyash" style="color: red;">Yash Tiwari</a>
+                        href="https://linktr.ee/refertoyash" style="color: red;">Yash Tiwari</a>
                 </div>
             </div>
         </footer>
