--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                         <div class="tiles">
                             <div class="content">
                                 <h2 class="title">Rank 1</h2>
-                                <p class="copy">Shubham Kumar OJha</p>
+                                <p class="copy">Subham Kumar OJha</p>
                                 <span>CSE Sophomore</span>
                             </div>
 
@@ -568,7 +568,7 @@
                     &copy; Copyright <strong>CES</strong>. All Rights Reserved
                 </div>
                 <div style="text-align: center;">
-                    Designed with <i class="fa fa-fw fa-heart fa-spin" style="color:red;font-size:24px;"></i> by <a
+                    Designed with <i class="fa fa-fw fa-heart" style="color:red;font-size:24px;"></i> by <a
                         href="https://linktr.ee/refertoyash" style="color: red;">Yash Tiwari</a>
                 </div>
             </div>
