--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                     &copy; Copyright <strong>CES</strong>. All Rights Reserved
                 </div>
                 <div style="text-align: center;">
-                    Designed with <i class="fa fa-fw fa-heart" style="color:red;font-size:24px;"></i> by <a
+                    Designed with <i class="fa fa-heart" style="color:red;font-size:24px;"></i> by <a
                         href="https://linktr.ee/refertoyash" style="color: red;">Yash Tiwari</a>
                 </div>
             </div>
