--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <img src="./Images/ces logo.png">
-                    <a href="http://www.mmmut.ac.in/" target= "_blank"><img src="./Images/mmmut logo.jpg" id="top-logo"></a>
+                    <a href="http://www.mmmut.ac.in/" target= "_blank"><img src="./Images/mmmut logo.jpg" id="top-logo" class="mmmut-logo"></a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -508,7 +508,7 @@
                         <div class="col-lg-4 col-md-6 footer-info">
                             <img src="./Images/ces logo.png" alt="TheEvenet">
                             <img src="./Images/mmmut logo.jpg" alt="TheEvenet" style="border-radius: 50%;"
-                                id="mmmut-logo">
+                                class="mmmut-logo">
                             <p>The Computer Engineering Society has been functioning since 1993 with the collective
                                 efforts of a group of
                                 B.Tech. students who had a strong urge to complement the theoretical and practical
