--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
                                 Gorakhpur<br>
                                 U.P India <br>
                                 <strong>Phone: </strong>6307938237, 8887596182 <br>
-                                <strong>Email: </strong>yashttiwari907@gmail.com,<br>
+                                <strong>Email: </strong>refertoyash@gmail.com<br>
                             </p>
 
                             <div class="social-links">
