--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                             <div class="cols">
                                 <div class="col" ontouchstart="this.classList.toggle('hover');">
                                     <div class="cont">
-                                        <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
+                                        <div class="front" style="background-image: url(https://source.unsplash.com/1600x900/?nature,water,flower)">
                                             <!-- Change the background image here  -->
                                             <div class="inner">
                                                 <p>Round-1</p>
